# xmleval

./: CMakeLists.txt  README.md  flake.nix  guix.scm
scripts/: fib.xml  prim.xml
src/: fib.xml  main.cpp  prim.xml  test.xml  xml_eval.cpp  xml_eval.hpp
